tests/ui/issues/issue-26237.stderr
error[E0618]: expected function, found `{integer}`
  --> $DIR/issue-26237.rs:10:18
   |
LL |         $not_a_function($some_argument)
   |         ------------------------------- call expression requires function
...
LL |     let mut value_a = 0;
   |         ----------- `value_a` has type `{integer}`
LL |     let mut value_b = 0;
LL |     macro_panic!(value_a, value_b);
   |                  ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0618`.
